# PixelEngine

./: .gitignore  CMakeLists.txt  README.md
examples/: example_ant.cpp  example_background.cpp  example_functions.cpp  example_life.cpp  example_mirror_paint.cpp  example_particles.cpp  functions.cpp
includes/: AbstractRectangle.cpp  AbstractRegularPolygon.cpp  ComponentBase.cpp  ComponentEvents.cpp  ComponentMovable.cpp  DrawManager.cpp  Engine.cpp  EventManager.cpp  ObjectManager.cpp  PixelArray.cpp  PixelCanvas.cpp  PixelDraw.cpp  PixelEngine.cpp  PixelEngine.h  PxBackground.cpp  PxBaseObj.cpp  PxButton.cpp  PxButtonForObj.ini  PxCanvas.cpp  PxCanvasObj.cpp  PxMovableObj.cpp  PxObj.cpp  PxRectangle.cpp  PxRegularPolygon.cpp  PxStaticBackground.cpp  PxWindowEvents.cpp  PxWindowEvents.h  VAOComponent.cpp  VAOrectangle.cpp  VAOrectangleComponent.cpp  VAOregularPolygon.cpp  useGLFM.cpp  variables.cpp  windowGLFM.cpp  windowGLFM.h
includes/glm/ext/: matrix_projection.inl  matrix_transform.hpp  matrix_transform.inl
shaders/: fragmentShader.txt  shader.cpp  shader.h  shader_s.h
src/: Engine.cpp  main.cpp
src/includes/: AbstractRectangle.cpp  ComponentBase.cpp  ComponentClickableWidget.cpp  Errors.cpp  GridLayout.cpp  ManagerObjects.cpp  ManagerPercentagesPosition.cpp  PixelEngine.h  PxBackground.cpp  PxButton.cpp  PxCanvas.cpp  PxCheckBox.cpp  PxRectangle.cpp  PxSlider.cpp  PxSwitch.cpp  PxWindowEvents.cpp  VAOComponent.cpp  VAOrectangle.cpp  variables.cpp  windowGLFM.cpp  windowGLFM.h
src/shaders/: shader.cpp  shader.h  vertexShader.txt
(+1 files in other folders)
